fix: versions color contrast. add versions system test. tweak webmocks again

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -34,3 +34,6 @@ a:not(.navbar-brand, .btn) {
     color: rgba(0, 0, 0, 0.75) !important;
   }
 }
+.diff li.ins, ins {
+  color: #007A00;
+}
